[package]
name = "analyzer"
version = "0.1.0"
authors = ["Reid Mitchell <reidmitchell1@gmail.com>"]
edition = "2018"

[dependencies]
ast = { path = "../ast" }
constants = { path = "../constants" }
diagnostics = { path = "../diagnostics" }
visitor = { path = "../visitor" }

[dev-dependencies]
parser = { path = "../parser" }
