[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2.13"
codegen = { path = "../codegen" }
compiler = { path = "../compiler" }
formatter = { path = "../formatter" }
# V8 is the default `pluma run` engine (ABI.md Phase 2): run the same WasmGC artifact
# you deploy. The VM stays available (`pluma run --vm`, and as the `wasm::emit`-failure
# fallback for programs the wasm backend doesn't yet support, e.g. `io.args`).
host = { path = "../host", features = ["v8"] }
ir = { path = "../ir" }
rustyline = "14"
vm = { path = "../vm" }
wasm = { path = "../wasm" }