[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2.13"
compiler = { path = "../compiler" }
formatter = { path = "../formatter" }
# V8 is the `pluma run`/`pluma test` engine (ABI.md Phase 2): run the same WasmGC
# artifact you deploy. There is no VM fallback — a program the wasm backend can't
# emit is a hard error.
host = { path = "../host" }
ir = { path = "../ir" }
wasm = { path = "../wasm" }