[package]
name = "pluma_compiler"
version = "0.1.0"
license = "MIT"
authors = ["Reid Mitchell <reidmitchell1@gmail.com>"]
edition = "2018"

[dependencies]
pluma_ast = { path = "../ast" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }

[dev-dependencies]
insta = { version = "0.16.0" }