[package]
name = "compiler"
version = "0.1.0"
license = "MIT"
authors = ["Reid Mitchell <reidmitchell1@gmail.com>"]
edition = "2018"

[dependencies]
analyzer = { path = "../analyzer" }
ast = { path = "../ast" }
constants = { path = "../constants" }
diagnostics = { path = "../diagnostics" }
emitter = { path = "../emitter" }
macros = { path = "../macros" }
module = { path = "../module" }
parser = { path = "../parser" }
visitor = { path = "../visitor" }
