[package]
name = "compiler"
version = "0.1.0"
license = "MIT"
authors = ["Reid Mitchell <reidmitchell1@gmail.com>"]
edition = "2018"

[dependencies]
ast = { path = "../ast" }
constants = { path = "../constants" }
diagnostics = { path = "../diagnostics" }
macros = { path = "../macros" }
module = { path = "../module" }
parser = { path = "../parser" }
visitor = { path = "../visitor" }
