[package]
name = "emitter"
version = "0.1.0"
authors = ["Reid Mitchell <reidmitchell1@gmail.com>"]
edition = "2018"

[dependencies]
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
ast = { path = "../ast" }
diagnostics = { path = "../diagnostics" }
visitor = { path = "../visitor" }