[package]
name = "host"
version = "0.1.0"
edition = "2024"
publish = false

# The WasmGC runtime host: supplies the `pluma.*` host imports over the ABI.md
# marshalling boundary (scalars + scratch-memory bytes, no GC reflection), then runs the
# artifact under V8. `cli` runs a built `.wasm` this way (streaming process stdio), and
# `conformance` diffs every fixture against the VM oracle. The engine-neutral ABI is what
# lets a stock JS engine like V8 — which cannot reflect WasmGC structs — run the artifact
# (ABI.md Phase 2); V8's generational GC is the deploy engine.

[dependencies]
# The V8 backend (rusty_v8): instantiates the WasmGC artifact under V8, driving the
# marshalled `pluma.*` imports as native callbacks over the exported memory's ArrayBuffer.
v8 = "137"
# The host-side I/O reactor for `core.net` — the same library the VM reactor uses
# (`vm/src/net.rs`), so the host mirrors the VM's park/wake byte-for-byte.
polling = "3"
# `core.random` / `core.uuid` host imports — the same crates the VM uses, so the host
# generates entropy/uuids identically (the deploy `Entropy` capability).
rand = "0.10"
uuid = { version = "1", features = ["v4", "v7"] }
