[package]
name = "host"
version.workspace = true
license.workspace = true
edition = "2024"
publish = false

# The WasmGC runtime host: supplies the `pluma.*` host imports over the ABI.md
# marshalling boundary (scalars + scratch-memory bytes, no GC reflection), then runs the
# artifact under V8. `cli` runs a built `.wasm` this way (streaming process stdio for
# `pluma run`/`pluma test`); `tests` runs each fixture this way (buffered) to snapshot
# stdout/stderr. The engine-neutral ABI is what lets a stock JS engine like V8 — which
# cannot reflect WasmGC structs — run the artifact (ABI.md Phase 2); V8's generational GC
# is the deploy engine.

[lib]
doctest = false

[dependencies]
# `std/sys/compile` (the playground compile primitive) runs the full frontend → IR →
# WasmGC pipeline in-process. None of these depend on `host`, so there's no cycle.
compiler = { path = "../compiler" }
ir = { path = "../ir" }
wasm = { path = "../wasm" }
# The V8 backend (rusty_v8): instantiates the WasmGC artifact under V8, driving the
# marshalled `pluma.*` imports as native callbacks over the exported memory's ArrayBuffer.
v8 = "137"
# The host-side I/O reactor for `std/sys/net`: accept/read/write park the calling fiber
# until the fd is ready (epoll/kqueue) rather than blocking the scheduler thread.
polling = "3"
# Lets `http.serve` set SO_REUSEADDR before bind, so a server rebinds cleanly while
# prior connections to its port are still draining in TIME_WAIT (e.g. `pluma dev`
# restarting the server subprocess on every edit).
socket2 = "0.6"
# `std/random` / `std/uuid` host imports (the deploy `Entropy` capability).
rand = "0.10"
uuid = { version = "1", features = ["v4", "v7"] }
# `std/time` clock imports (`time.now`/`monotonic`/`parse`) — wall-clock + strtime parsing.
jiff = "0.2.25"
# `std/sys/db` embedded SQLite (`bundled` = compile SQLite from source, no system lib).
# Vendored per the stdlib heavy-lifting rule; `HostDb` stays crate-agnostic so a later
# swap to a pure-Rust engine (turso) is a one-file change.
rusqlite = { version = "0.31", features = ["bundled"] }
