[package]
name = "lsp"
version.workspace = true
edition = "2024"

[dependencies]
compiler = { path = "../compiler" }
formatter = { path = "../formatter" }
linter = { path = "../linter" }
dashmap = "6.0.1"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }