[package]
name = "lsp"
version.workspace = true
edition = "2024"

[dependencies]
compiler = { path = "../compiler" }
formatter = { path = "../formatter" }
linter = { path = "../linter" }
dashmap = "6.0.1"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }

[dev-dependencies]
# `test-util` enables tokio's pausable test clock so the debounce test runs
# deterministically and instantly instead of sleeping real wall-clock time.
tokio = { version = "1.17.0", features = ["full", "test-util"] }