[package]
name = "pluma-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
codegen = { path = "../codegen" }
compiler = { path = "../compiler" }
vm = { path = "../vm" }

[dev-dependencies]
datatest-stable = "0.2"
insta = "1"

[[test]]
name = "analyze"
harness = false

[[test]]
name = "run"
harness = false
