[package]
name = "pluma"
version = "0.1.0"
license = "MIT"
authors = ["Reid Mitchell <reidmitchell1@gmail.com>"]
edition = "2018"

[dependencies]
atty = "0.2.13"
pluma_compiler = { path = "../pluma_compiler" }
pluma_constants = { path = "../pluma_constants" }
pluma_diagnostics = { path = "../pluma_diagnostics" }
rustyline = "6.2.0"