[package]
name = "pluma"
version = "0.1.0"
license = "MIT"
authors = ["Reid Mitchell <reidmitchell1@gmail.com>"]
edition = "2018"

[dependencies]
atty = "0.2.13"
glob = "0.3.0"
pluma_compiler = { path = "../pluma_compiler" }
pluma_constants = { path = "../pluma_constants" }
pluma_diagnostics = { path = "../pluma_diagnostics" }
pluma_doc = { path = "../pluma_doc" }
pluma_formatter = { path = "../pluma_formatter" }
pluma_parser = { path = "../pluma_parser" }
pluma_repl = { path = "../pluma_repl" }