[package]
name = "pluma_doc"
version = "0.1.0"
license = "MIT"
authors = ["Reid Mitchell <reidmitchell1@gmail.com>"]
edition = "2018"

[dependencies]
pluma_ast = { path = "../pluma_ast" }
pluma_compiler = { path = "../pluma_compiler" }
pluma_parser = { path = "../pluma_parser" }
pluma_visitor = { path = "../pluma_visitor" }