[package]
name = "pluma_emitter"
version = "0.1.0"
authors = ["Reid Mitchell <reidmitchell1@gmail.com>"]
edition = "2018"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
pluma_ast = { path = "../pluma_ast" }
pluma_diagnostics = { path = "../pluma_diagnostics" }
pluma_visitor = { path = "../pluma_visitor" }