[package]
name = "pluma_formatter"
version = "0.1.0"
license = "MIT"
authors = ["Reid Mitchell <reidmitchell1@gmail.com>"]
edition = "2018"

[dependencies]
pluma_ast = { path = "../pluma_ast" }
pluma_constants = { path = "../pluma_constants" }
pluma_diagnostics = { path = "../pluma_diagnostics" }
pluma_module = { path = "../pluma_module" }
pluma_visitor = { path = "../pluma_visitor" }