[package]
name = "pluma_module"
version = "0.1.0"
license = "MIT"
authors = ["Reid Mitchell <reidmitchell1@gmail.com>"]
edition = "2018"

[dependencies]
pluma_ast = { path = "../pluma_ast" }
pluma_constants = { path = "../pluma_constants" }
pluma_diagnostics = { path = "../pluma_diagnostics" }
pluma_parser = { path = "../pluma_parser" }
pluma_visitor = { path = "../pluma_visitor" }
