[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false

# The snapshot suites (analyze/run/format). `run` compiles each fixture to WasmGC
# and runs it under V8 (the deploy engine) via `host` — the same artifact `pluma
# run` ships — so the snapshot corpus is the wasm backend's regression guard.
[dependencies]
compiler = { path = "../compiler" }
formatter = { path = "../formatter" }
host = { path = "../host" }
ir = { path = "../ir" }
wasm = { path = "../wasm" }

[dev-dependencies]
datatest-stable = "0.3"
insta = "1"

[[test]]
name = "analyze"
path = "analyze.rs"
harness = false

[[test]]
name = "format"
path = "format.rs"
harness = false

[[test]]
name = "run"
path = "run.rs"
harness = false
