[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false

# The snapshot suites (analyze/run/format). `run` compiles each fixture to WasmGC
# and runs it under V8 (the deploy engine) via `host` — the same artifact `pluma
# run` ships — so the snapshot corpus is the wasm backend's regression guard.
[dependencies]
compiler = { path = "../compiler" }
formatter = { path = "../formatter" }
host = { path = "../host" }
ir = { path = "../ir" }
wasm = { path = "../wasm" }

[dev-dependencies]
datatest-stable = "0.3"
insta = "1"

[[test]]
name = "analyze"
path = "analyze.rs"
harness = false

# The error-message audit suite. Renders diagnostics exactly as the CLI does
# (via compiler::render_diagnostics) and snapshots them, one fixture per error
# path. See errors.rs.
[[test]]
name = "errors"
path = "errors.rs"
harness = false

[[test]]
name = "format"
path = "format.rs"
harness = false

[[test]]
name = "run"
path = "run.rs"
harness = false

# The reuse-soundness harness. Compiles each program twice — reuse on vs the
# persistent baseline (reuse off) — runs both under V8, and asserts identical
# observable output. The default libtest harness (no datatest), so it owns its
# own corpus + meta-checks rather than a per-file fixture sweep.
[[test]]
name = "soundness"
path = "soundness.rs"
