[package]
name = "tests"
version.workspace = true
edition = "2024"
publish = false

# The snapshot suites (analyze/run/format). `run` compiles each fixture to WasmGC
# and runs it under V8 (the deploy engine) via `host` — the same artifact `pluma
# run` ships — so the snapshot corpus is the wasm backend's regression guard.
[dependencies]
compiler = { path = "../compiler" }
formatter = { path = "../formatter" }
host = { path = "../host" }
ir = { path = "../ir" }
linter = { path = "../linter" }
wasm = { path = "../wasm" }

[dev-dependencies]
datatest-stable = "0.3"
insta = "1"

[[test]]
name = "analyze"
path = "analyze.rs"
harness = false

# The error-message audit suite. Renders diagnostics exactly as the CLI does
# (via compiler::render_diagnostics) and snapshots them, one fixture per error
# path. See errors.rs.
[[test]]
name = "errors"
path = "errors.rs"
harness = false

[[test]]
name = "format"
path = "format.rs"
harness = false

# The lint suite. One fixture per `tests/lint/<name>/main.pa`; renders the lint
# warnings exactly as the CLI does and snapshots them, so the corpus is a direct
# audit of which lints fire (and where) on which sources. See lint.rs.
[[test]]
name = "lint"
path = "lint.rs"
harness = false

# The lint autofix suite. Runs the same `tests/lint/<name>/main.pa` corpus
# through `pluma lint --fix` (fix + reformat), snapshots the rewritten source to
# `fix.snap`, and asserts the fix parses and is a fixpoint. See lint_fix.rs.
[[test]]
name = "lint_fix"
path = "lint_fix.rs"
harness = false

[[test]]
name = "run"
path = "run.rs"
harness = false

# The reuse-soundness harness. Compiles each program twice — reuse on vs the
# persistent baseline (reuse off) — runs both under V8, and asserts identical
# observable output. The default libtest harness (no datatest), so it owns its
# own corpus + meta-checks rather than a per-file fixture sweep.
[[test]]
name = "soundness"
path = "soundness.rs"

# `pluma dev` CSS class naming. Pins that `hmr` mode tags a `css.ruleset` def's
# generated class with the def name (`card-<hash>`) while a normal build keeps the
# bare content hash (`c<hash>`) — the one path the ungated run-suite can't exercise.
[[test]]
name = "css_dev_names"
path = "css_dev_names.rs"
