[package]
name = "vm"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
compiler = { path = "../compiler" }
rand = "0.10"
uuid = { version = "1", features = ["v4", "v7"] }
jiff = "0.2.25"
im-rc = "15.1.0"
# Cross-platform readiness poller (epoll/kqueue) for the async socket reactor:
# `core.net` accept/read/write park the calling fiber until the fd is ready
# rather than blocking the scheduler thread. See vm/src/net.rs.
polling = "3"
